// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`groupMultiselect (isCI = false) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "│
◆  Select a fruit
│  ◻ group1
│  └ ◻ group1value0
│  ◻ group2
│  └ ◻ group2value0
└
",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > can deselect an option 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  │ ◼ group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ◼ group1
│  │ ◼ group1value0
│  └ ◼ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ◻ group1
│  │ ◼ group1value0
│  └ ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > can select a group 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ◼ group1
│  │ ◼ group1value0
│  └ ◼ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0, group1value1",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > can select a group by selecting all members 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  │ ◼ group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ◼ group1
│  │ ◼ group1value0
│  └ ◼ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0, group1value1",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > can select multiple options 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  │ ◻ group1value1
│  └ ◻ group1value2
└
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  │ ◼ group1value0",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "│  │ ◼ group1value1",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0, group1value1",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > can submit empty selection when require = false 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > cursorAt sets initial selection 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "│  └ ◼ group1value1",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value1",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > groupSpacing > negative spacing is ignored 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  └ ◻ group1value0
│  ◻ group2
│  └ ◻ group2value0
└
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ◼ group1
│  └ ◼ group1value0
│  ◻ group2
│  └ ◻ group2value0
└
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > groupSpacing > renders spaced groups 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│
│  ◻ group1
│  └ ◻ group1value0
│
│
│  ◻ group2
│  └ ◻ group2value0
└
",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=4>",
  "<erase.down>",
  "│  ◼ group1
│  └ ◼ group1value0
│
│
│  ◻ group2
│  └ ◻ group2value0
└
",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > initial values can be set 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◼ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value1",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > renders error when nothing selected 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "▲  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└  Please select at least one option.
   Press  space  to select,  enter  to submit
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  │ ◼ group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > renders message with options 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
│  ◻ group2
│  └ ◻ group2value0
└
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  │ ◼ group1value0",
  "<cursor.down count=5>",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > selectableGroups = false > cannot select groups 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│   group1
│    ◻ group1value0
│    ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│    ◼ group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > selectableGroups = false > selecting all members of group does not select group 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│   group1
│    ◻ group1value0
│    ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│    ◼ group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "│    ◼ group1value1",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0, group1value1",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > values can be non-primitive 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ value0
│  └ ◻ value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  │ ◼ value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  value0",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "│
◆  Select a fruit
│  ◻ group1
│  └ ◻ group1value0
│  ◻ group2
│  └ ◻ group2value0
└
",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can deselect an option 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  │ ◼ group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ◼ group1
│  │ ◼ group1value0
│  └ ◼ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ◻ group1
│  │ ◼ group1value0
│  └ ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can select a group 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ◼ group1
│  │ ◼ group1value0
│  └ ◼ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0, group1value1",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can select a group by selecting all members 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  │ ◼ group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ◼ group1
│  │ ◼ group1value0
│  └ ◼ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0, group1value1",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can select multiple options 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  │ ◻ group1value1
│  └ ◻ group1value2
└
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  │ ◼ group1value0",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "│  │ ◼ group1value1",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0, group1value1",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can submit empty selection when require = false 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > cursorAt sets initial selection 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "│  └ ◼ group1value1",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value1",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > groupSpacing > negative spacing is ignored 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  └ ◻ group1value0
│  ◻ group2
│  └ ◻ group2value0
└
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ◼ group1
│  └ ◼ group1value0
│  ◻ group2
│  └ ◻ group2value0
└
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > groupSpacing > renders spaced groups 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│
│  ◻ group1
│  └ ◻ group1value0
│
│
│  ◻ group2
│  └ ◻ group2value0
└
",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=4>",
  "<erase.down>",
  "│  ◼ group1
│  └ ◼ group1value0
│
│
│  ◻ group2
│  └ ◻ group2value0
└
",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > initial values can be set 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◼ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value1",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > renders error when nothing selected 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "▲  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└  Please select at least one option.
   Press  space  to select,  enter  to submit
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  │ ◼ group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > renders message with options 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
│  ◻ group2
│  └ ◻ group2value0
└
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  │ ◼ group1value0",
  "<cursor.down count=5>",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > selectableGroups = false > cannot select groups 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│   group1
│    ◻ group1value0
│    ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│    ◼ group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > selectableGroups = false > selecting all members of group does not select group 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│   group1
│    ◻ group1value0
│    ◻ group1value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│    ◼ group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "│    ◼ group1value1",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  group1value0, group1value1",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > values can be non-primitive 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ group1
│  │ ◻ value0
│  └ ◻ value1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  │ ◼ value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  value0",
  "
",
  "<cursor.show>",
]
`;
